finished scaper for title, and url

--- a/app/views/news/show.html.erb
+++ b/app/views/news/show.html.erb
@@ -2,12 +2,12 @@
 
 <p>
   <strong>Headline:</strong>
-  <%= @news.headline %>
+  <%= @news.title %>
 </p>
 
 <p>
   <strong>Url:</strong>
-  <%= @news.url %>
+  <%= @news.link %>
 </p>
 
 <%= link_to 'Edit', edit_news_path(@news) %> |
