--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -7,7 +7,7 @@
   <thead>
     <tr>
       <th>Headline</th>
-      <th>Url</th>
+      <th>Link</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -15,8 +15,8 @@
   <tbody>
     <% @news.each do |news| %>
       <tr>
-        <td><%= news.headline %></td>
-        <td><%= news.url %></td>
+        <td><%= news.title %></td>
+        <td><%= news.link %></td>
         <td><%= link_to 'Show', news %></td>
         <td><%= link_to 'Edit', edit_news_path(news) %></td>
         <td><%= link_to 'Destroy', news, method: :delete, data: { confirm: 'Are you sure?' } %></td>
