--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -1,13 +1,14 @@
-
+<div class="container">
 <p id="notice"><%= notice %></p>
-
-<h1>News</h1>
+<h1 style="text-align: center;">Big Boss' News Network Inc. 🕴️</h1>
+<%= link_to 'Add new news', new_news_path, class: "badge badge-primary" %>
 <%= button_to 'Scrape News', scrape_news_index_path %>
+<br>
 <table>
   <thead>
     <tr>
       <th>Headline</th>
-      <th>Link</th>
+
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -15,16 +16,12 @@
   <tbody>
     <% @news.each do |news| %>
       <tr>
-        <td><%= news.title %></td>
-        <td><%= news.link %></td>
-        <td><%= link_to 'Show', news %></td>
-        <td><%= link_to 'Edit', edit_news_path(news) %></td>
-        <td><%= link_to 'Destroy', news, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td style="font-size:20px;"><%= news.title %>
+          <a href="<%= news.link %>">Get the full scoop!</a>
+        </td>
+        <td><%= link_to 'Delete', news, method: :delete, data: { confirm: 'Why are you like this??' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New News', new_news_path %>
+</div>
